fix for larger emails on mobile devices

--- a/src/sass/messageView.scss
+++ b/src/sass/messageView.scss
@@ -495,6 +495,8 @@
 		}
     	.frame {
     		width: 100%;
+            max-width: 100%;
+            overflow: auto;
     		position: relative;
     		clear: both;
             padding: calc(15px + 1.5rem);
